# url-shortening-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: database.py
app/schemas/: url_schema.py
app/utils/: datetime_json.py  short_code.py  short_url.py  validate_url.py
tests/core/: dummy_database.py  dummy_table_data.py
tests/db/: test_delete_data.py  test_insert_data.py  test_select_all_data.py  test_select_data.py  test_update_data.py
tests/utils/: test_short_url.py
